src/test/ui/const-generics/issues/issue-62504.min.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-62504.rs:18:25
   |
LL |         ArrayHolder([0; Self::SIZE])
   |                         ^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-62504.rs:18:9
   |
LL |         ArrayHolder([0; Self::SIZE])
   |         ^^^^^^^^^^^^---------------^
   |                     |
   |                     expected `[u32; X]`, found `[u32; _]`
   |
note: tuple struct defined here
  --> $DIR/issue-62504.rs:14:1
   |
LL | struct ArrayHolder<const X: usize>([u32; X]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |         struct ArrayHolder<const X: usize>([u32; X]);({[u32; X]})
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
